--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
     <header>
-        <img src="logo2.png" id="logo" alt="Red Cross Youth Club Logo">
+        <img src="./images/logo2.png" id="logo" alt="Red Cross Youth Club Logo">
         <h1>Orkhon Empathy Schools Red Cross Youth Club</h1>
         <nav>
             <a href="#about">About Us</a>
@@ -75,15 +75,15 @@
             <h2>Our Activities</h2>
             <div class="activities-gallery">
                 <div class="activity-card">
-                    <img src="./image/surgalt.jpg" alt="First Aid Training" class="activity-photo">
+                    <img src="./images/surgalt.jpg" alt="First Aid Training" class="activity-photo">
                     <h3>First Aid Training</h3>
                 </div>
                 <div class="activity-card">
-                    <img src="./image/handiv.jpg" alt="Community Outreach" class="activity-photo">
+                    <img src="./images/handiv.jpg" alt="Community Outreach" class="activity-photo">
                     <h3>Community Outreach</h3>
                 </div>
                 <div class="activity-card">
-                    <img src="./image/gamshig.jpg" alt="Disaster Preparedness" class="activity-photo">
+                    <img src="./images/gamshig.jpg" alt="Disaster Preparedness" class="activity-photo">
                     <h3>Disaster Preparedness</h3>
                 </div>
             </div>
