--- a/activities.html
+++ b/activities.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="C:\Users\Be the BEST\OneDrive\Pictures\logo2.png" id="logo" alt="Red Cross Youth Club Logo">
+        <img src="./images/logo2.png" id="logo" alt="Red Cross Youth Club Logo">
         <h1>Orkhon Empathy Schools Red Cross Youth Club</h1>
         <nav>
             <a href="web.html">Home</a>
@@ -76,7 +76,7 @@
             <h2>Past Activities</h2>
             <div class="activities-gallery">
                 <div class="activity-card">
-                    <img src="C:\Users\Be the BEST\OneDrive\Pictures\surgalt.jpg" alt="First Aid Training" class="activity-photo">
+                    <img src="./images/surgalt.jpg" alt="First Aid Training" class="activity-photo">
                     <div class="activity-content">
                         <h3>First Aid Training</h3>
                         <p class="activity-date-small">April 5, 2025</p>
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="activity-card">
-                    <img src="C:\Users\Be the BEST\OneDrive\Pictures\handiv.jpg" alt="Community Outreach" class="activity-photo">
+                    <img src="./images/handiv.jpg" alt="Community Outreach" class="activity-photo">
                     <div class="activity-content">
                         <h3>Community Outreach</h3>
                         <p class="activity-date-small">March 15, 2025</p>
